Archive2/80/8ea3ceac1de735/output
main.cpp:1:7: error: expected nested-name-specifier before 'System'
 using System;
       ^
main.cpp:2:7: error: expected nested-name-specifier before 'System'
 using System.Text;
       ^
main.cpp:3:7: error: expected nested-name-specifier before 'System'
 using System.Text.RegularExpressions;
       ^
main.cpp:4:7: error: expected nested-name-specifier before 'System'
 using System.Threading;
       ^
main.cpp:5:7: error: expected nested-name-specifier before 'NUnit'
 using NUnit.Framework;
       ^
main.cpp:6:7: error: expected nested-name-specifier before 'Selenium'
 using Selenium;
       ^
main.cpp:10:1: error: expected unqualified-id before '[' token
 [TestFixture]
 ^
main.cpp:53:1: error: expected '}' at end of input
 }
 ^
